force-app/main/default/objects/Vendor_Enquiry__c/Vendor_Enquiry__c.object-meta.xml
<CustomObject>
    <label>Vendor Enquiry</label>
    <nameField>
        <label>Vendor Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor_Enquiry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>