force-app/main/default/objects/Vendor_Enquiry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Enquiry</relationshipLabel>
    <relationshipName>Vendor_Enquiry</relationshipName>
    <type>Lookup</type>
</CustomField>