force-app/main/default/objects/Vendor_Enquiry__c/fields/Contact_number__c.field-meta.xml
<CustomField>
    <fullName>Contact_number__c</fullName>
    <inlineHelpText>Please provide a valid contact number.</inlineHelpText>
    <label>Contact number</label>
    <type>Phone</type>
</CustomField>