force-app/main/default/objects/Vendor_Enquiry__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <inlineHelpText>Please provide your role at organisation.</inlineHelpText>
    <label>Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>