force-app/main/default/objects/Vendor_Enquiry__c/fields/How_did_you_hear_about_TIG__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_TIG__c</fullName>
    <inlineHelpText>Which source is helped you to get to know about this.</inlineHelpText>
    <label>How did you hear about TIG?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>