force-app/main/default/objects/Vendor_Enquiry__c/fields/Name_of_the_Organization__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Organization__c</fullName>
    <inlineHelpText>Please provide Company/Organization name.</inlineHelpText>
    <label>Name of the Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>