force-app/main/default/objects/Vendor_Enquiry__c/fields/Official_Email_id__c.field-meta.xml
<CustomField>
    <fullName>Official_Email_id__c</fullName>
    <inlineHelpText>Please provide a valid mail address.</inlineHelpText>
    <label>Official Email id</label>
    <type>Email</type>
</CustomField>