force-app/main/default/objects/Vendor_Enquiry__c/fields/One_Time_Vendor__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this check box if vendor is one time vendor.</description>
    <inlineHelpText>Please check this check box if vendor is one time vendor.</inlineHelpText>
    <label>One Time Vendor</label>
    <type>Checkbox</type>
</CustomField>