force-app/main/default/objects/Vendor_Enquiry__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <inlineHelpText>please post your query here.</inlineHelpText>
    <label>Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>