force-app/main/default/objects/Vendor_Enquiry__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <inlineHelpText>Please provide the valid reason for rejection.</inlineHelpText>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>