force-app/main/default/objects/Vendor_Enquiry__c/fields/Status1__c.field-meta.xml
<CustomField>
    <fullName>Status1__c</fullName>
    <label>Status1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>