force-app/main/default/objects/Vendor_Enquiry__c/validationRules/lock_record_when_status_is_onboarding.validationRule-meta.xml
<ValidationRule>
    <fullName>lock_record_when_status_is_onboarding</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ), &quot;Selected for Onboarding&quot;)</errorConditionFormula>
    <errorMessage>you can&apos;t update the value when status is on boarding</errorMessage>
</ValidationRule>