force-app/main/default/objects/Vendor_Enquiry__c/validationRules/Status_is_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_is_Rejected</fullName>
    <active>true</active>
    <description>if Status is Rejected, Please provide a valid rejection reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Rejected&apos;), ISBLANK(Rejection_Reason__c))</errorConditionFormula>
    <errorMessage>Please provide a rejection reason.</errorMessage>
</ValidationRule>