force-app/main/default/objects/Vendor_Enquiry__c/validationRules/status_New_to_Onboarding_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>status_New_to_Onboarding_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &quot;Selected for Onboarding&quot;),
  File_Type__c  &lt;&gt; &quot;Other&quot;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>First upload the file then you go to Onboarding stage.</errorMessage>
</ValidationRule>